nvigation-gap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,8 +153,10 @@ img {
 }
 
 .navigation {
-    gap: 276px;
+    
     align-items: center;
+    justify-content: space-between;
+    gap: 276px;
   
 }
 
